src/app/globals.css
/* Gilmer font */

@font-face {
  font-family: 'Gilmer';
  src: url('/fonts/gilmer/Gilmer Regular.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Gilmer';
  src: url('/fonts/gilmer/Gilmer Medium.woff2') format('woff2');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Gilmer';
  src: url('/fonts/gilmer/Gilmer Bold.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* Root Tokens (Design System) */

:root {
  /* Colors */
  --background: #ffffff;
  --nav-background: #ffffff;
  --footer-background: #edeae8;

  --button-text-color: #3e424c;
  --button-text-hover-color: #171717;
  --button-text-active-color: #365d95;
  --button-hover-background: #365d95;

  --color-default-neutral-200: #f7f4f2;
  --color-default-primary-500: #5993ea;
  --color-default-primary-200: #cddff8;
  --color-default-grey-900: #1f222c;
  --color-grey-shades-grey-400: #c5c9d2;
  --color-brown: #532728;
  --color-default-white: #ffffff;
  --color-default-white-33: rgba(255, 255, 255, 0.33);

  /* Spacing */
  --spacing-size-4: 0.25rem;
  --spacing-size-6: 0.375rem;
  --spacing-size-8: 0.5rem;
  --spacing-size-12: 0.75rem;
  --spacing-size-14: 0.875rem;
  --spacing-size-16: 1rem;
  --spacing-size-24: 1.5rem;
  --spacing-size-28: 1.75rem;
  --spacing-size-32: 2rem;
  --spacing-size-48: 3rem;
  --spacing-size-64: 4rem;
  --spacing-size-80: 5rem;
  --spacing-size-120: 7.5rem;

  /* Radius */
  --radius-4: 0.25rem;
  --radius-8: 0.5rem;
  --radius-12: 0.75rem;
  --radius-16: 1rem;

  /* Typography */
  --font-family-heading: 'Gilmer', sans-serif;
  --font-weight-heading-bold: 700;
  --font-weight-heading-semibold: 600;
  --font-size-body-xs: 0.75rem;
  --font-lineHeight-body-xs: 1.25rem;
  --font-size-heading-xl: 1.75rem;
  --font-lineHeight-heading-xl: 2rem;
  --font-letterSpacing-heading-xl: -0.03rem;

  --font-family-strong: 'Outfit', sans-serif;
  --font-weight-strong-bold: 700;
  --font-weight-strong-extraBold: 900;
  --font-size-strong-xl: 4rem;
  --font-lineHeight-strong-xl: 4.5rem;
  --font-size-strong-lg: 3rem;
  --font-lineHeight-strong-lg: 3.5rem;
  --font-letterSpacing-strong-lg: -0.04em;
  --font-size-strong-md: 2rem;
  --font-lineHeight-strong-md: 2.25rem;

  --font-family-body: 'Montserrat', sans-serif;
  --font-weight-body-regular: 500;
  --font-weight-body-semibold: 600;
  --font-size-body-sm: 0.875rem;
  --font-lineHeight-body-sm: 1.375rem;
  --font-size-body-md: 1rem;
  --font-lineHeight-body-md: 1.75rem;

  /* Layout */
  --container-padding-horizontal-lg: 4rem;
  --container-padding-horizontal-sm: 1.5rem;
  --padding-vertical-lg: 7.5rem;
  --padding-vertical-sm: 4rem;
  --screen-lg: 80rem;
  --screen-sm: 48rem;
}

/* Responsive tokens */

@media (max-width: 48rem) {
  :root {
    --font-size-heading-xl: 1.25rem;
    --font-lineHeight-heading-xl: 1.5rem;
    --font-size-strong-xl: 2.5rem;
    --font-lineHeight-strong-xl: 3rem;
    --font-size-strong-lg: 2rem;
    --font-lineHeight-strong-lg: 2rem;
    --font-size-strong-md: 1.5rem;
    --font-lineHeight-strong-md: 1.75rem;
  }
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background: var(--background, #ffffff);
  color: var(--color-default-grey-900, #1f222c);
  display: flex;
  flex-direction: column;
}

h1,
h2,
h3,
h4,
p {
  margin: 0;
  padding: 0;
}

.strong-xl,
.strong-lg {
  font-family: var(--font-family-strong, 'Outfit');
}

.heading-xl,
.heading-xs {
  font-family: var(--font-family-heading, 'Gilmer');
}

.body-md,
.body-sm {
  font-family: var(--font-family-body, 'Montserrat');
}

.strong-xl {
  font-weight: var(--font-weight-strong-extraBold, 900);
  font-size: var(--font-size-strong-xl, 4rem);
  line-height: var(--font-lineHeight-strong-xl, 4.5rem);
}

.strong-lg {
  font-weight: var(--font-weight-strong-bold, 700);
  font-size: var(--font-size-strong-lg, 3rem);
  line-height: var(--font-lineHeight-strong-lg, 3.5rem);
  letter-spacing: var(--font-letterSpacing-strong-lg, -0.04em);
}

.strong-md {
  font-weight: var(--font-weight-strong-bold, 700);
  font-size: var(--font-size-strong-md, 2rem);
  line-height: var(--font-lineHeight-strong-md, 2.25rem);
  letter-spacing: var(--font-letterSpacing-strong-lg, -0.04em);
}

.heading-xl {
  font-weight: var(--font-weight-heading-semibold, 600);
  font-size: var(--font-size-heading-xl, 1.75rem);
  line-height: var(--font-lineHeight-heading-xl, 2rem);
  letter-spacing: var(--font-letterSpacing-heading-xl, -0.03rem);
}

.heading-xs {
  font-weight: var(--font-weight-heading-bold, 700);
  font-size: var(--font-size-body-xs, 0.75rem);
  line-height: var(--font-lineHeight-body-xs, 1.25rem);
  letter-spacing: 0.125rem;
  color: var(--color-brown, #532728);
}

.body-md {
  font-weight: var(--font-weight-body-regular, 500);
  font-size: var(--font-size-body-md, 1rem);
  line-height: var(--font-lineHeight-body-md, 1.75rem);
}

.body-sm {
  font-weight: var(--font-weight-body-semibold, 600);
  font-size: var(--font-size-body-sm, 0.875rem);
  line-height: var(--font-lineHeight-body-sm, 1.375rem);
}

span {
  color: var(--color-default-primary-500, #5993ea);
}

.uppercase {
  text-transform: uppercase;
}

